--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "*.{js,ts,tsx}": "eslint --fix --max-warnings=0"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "core-js": "^3.39.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
