--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^19.0.1",
     "@types/webpack-env": "^1.18.5",
     "@webpack-cli/generators": "^3.0.7",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
@@ -48,9 +49,12 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.11",
     "mini-css-extract-plugin": "^2.9.2",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
     "react-refresh": "^0.16.0",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0",
