--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.7.9",
     "core-js": "^3.39.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
