--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "*.{js,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-query-devtools": "^5.62.11",
     "axios": "^1.7.9",
     "core-js": "^3.39.0",
     "react": "^19.0.0",
