chore: 개발환경 실행전 환경변수 체크

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -c ./configs/webpack.prod.js",
-    "dev": "webpack serve --open -c ./configs/webpack.dev.js",
+    "dev": "node scripts/check-env.js && webpack serve -c ./configs/webpack.dev.js",
     "prepare": "husky install"
   },
   "keywords": [],
