--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -c ./configs/webpack.prod.js",
-    "dev": "node scripts/check-env.js && webpack serve -c ./configs/webpack.dev.js",
+    "build": "rspack -c ./configs/rspack.prod.js",
+    "dev": "node scripts/check-env.js && rspack serve -c ./configs/rspack.dev.js",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -34,7 +34,9 @@
     "@babel/preset-typescript": "^7.26.0",
     "@babel/runtime-corejs3": "^7.26.0",
     "@eslint/js": "^9.16.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@rspack/cli": "^1.2.3",
+    "@rspack/core": "^1.2.3",
+    "@rspack/plugin-react-refresh": "^1.0.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@types/webpack-env": "^1.18.5",
@@ -48,24 +50,20 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
-    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "globals": "^15.13.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.11",
-    "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
     "react-refresh": "^0.16.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
+    "ts-checker-rspack-plugin": "^1.1.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
   }
 }
