--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/*"
   ],
   "scripts": {
+    "web-dev": "pnpm --filter umbra-web run dev",
     "prepare": "husky install"
   },
   "keywords": [],
