--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,28 @@
     "react": "^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.1"
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-essentials": "^8.5.6",
+    "@storybook/addon-interactions": "^8.5.6",
+    "@storybook/addon-onboarding": "^8.5.6",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/addon-webpack5-compiler-swc": "^2.1.0",
+    "@storybook/blocks": "^8.5.6",
+    "@storybook/react": "^8.5.6",
+    "@storybook/react-webpack5": "^8.5.6",
+    "@storybook/test": "^8.5.6",
+    "@types/node": "^22.13.4",
+    "@types/react": "^19.0.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "storybook": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
+    "prettier": "^3.4.2"
+  },
+  "scripts": {
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   }
 }
-
