--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,10 +21,11 @@
     "@types/react": "^19.0.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
+    "prettier": "^3.4.2",
     "storybook": "^8.5.6",
+    "storybook-react-rsbuild": "^0.1.10",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "prettier": "^3.4.2"
+    "typescript": "^5.7.2"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
