--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,7 @@
     "@storybook/react": "^8.5.6",
     "@storybook/react-webpack5": "^8.5.6",
     "@storybook/test": "^8.5.6",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.1",
     "autoprefixer": "^10.4.20",
