--- a/apps/umbra/package.json
+++ b/apps/umbra/package.json
@@ -18,13 +18,13 @@
     "@headlessui/react": "^2.2.0",
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.62.11",
+    "@zaydenvc/ui": "^1.0.0",
     "axios": "^1.7.9",
     "core-js": "^3.39.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
-    "zustand": "^5.0.3",
-    "@umbra/ui": "workspace:*"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
