--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /node_modules
 /dist
 
-apps/umbra/.env
 apps/umbra/node_modules
 apps/umbra/dist
 packages/ui/node_modules
@@ -9,3 +8,7 @@ packages/ui/node_modules
 *storybook.log
 
 .turbo
+
+apps/movie/.env
+apps/movie/node_modules
+apps/movie/dist
