--- a/apps/umbra/package.json
+++ b/apps/umbra/package.json
@@ -21,6 +21,7 @@
     "@zaydenvc/ui": "^5.0.0",
     "axios": "^1.7.9",
     "core-js": "^3.39.0",
+    "nuqs": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
