feat: JIT 패키지로 적용 및 locatorjs 에러로 인핸 react 버전 다운그레이드

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "@zaydenvc/ui",
+  "name": "@umbra/ui",
   "version": "5.0.0",
+  "exports": {
+    ".": {
+      "types": "./component/carousel.tsx",
+      "default": "./component/carousel.tsx"
+    }
+  },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -17,7 +23,10 @@
     "prepare": "pnpm run build"
   },
   "peerDependencies": {
-    "react": "^19.0.0"
+    "react": "^18.3.1"
+  },
+  "dependencies": {
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
