--- a/apps/umbra/package.json
+++ b/apps/umbra/package.json
@@ -22,11 +22,12 @@
     "axios": "^1.7.9",
     "core-js": "^3.39.0",
     "nuqs": "^2.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.1.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@umbra/ui": "workspace:*"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
